# Ahrie_AI

./: CLAUDE.md  llm_full.txt  package-lock.json  package.json
ahrie-ai/: .env.backup  .env.example  .gitignore  HERO_IMPLEMENTATION_GUIDE.md  HERO_PAGE_DESIGN_PLAN.md  HERO_VISUAL_MOCKUP.md  IMPLEMENTATION_ROADMAP.md  LANGDB_SETUP.md  README.md  dev.sh  docker-compose.yml  playground.py  pyproject.toml  requirements-dev.txt  requirements-langdb.txt  requirements.txt  setup_langdb.sh  start_app.sh  test_agents.py  test_db.py  test_direct_api.py  test_langdb_agno.py  test_langdb_debug.py  test_langdb_simple.py  test_llm_connection.py  test_simple_team.py  test_team_orchestrator_v2.py  test_transcript_api.py  test_youtube_review_agent.py  test_youtube_scraper_only.py
ahrie-ai/scripts/: init_db.py  init_db.sql  run_ngrok.sh  setup_dev.sh  start_dev_server.sh
ahrie-ai/src/: main.py
ahrie-ai/src/agents/: CLAUDE.md  __init__.py  coordinator.py  cultural_advisor.py  medical_expert.py  orchestrator.py  review_analyst.py  team_orchestrator_v2.py
ahrie-ai/src/api/: __init__.py  main.py  middleware.py
ahrie-ai/src/api/routes/: __init__.py  health.py  webhook.py
ahrie-ai/src/bot/: __init__.py  handlers.py  keyboards.py
ahrie-ai/src/database/: __init__.py  connection.py  models.py
ahrie-ai/src/knowledge/: __init__.py  vector_store.py
ahrie-ai/src/scrapers/: __init__.py  medical_scraper.py  youtube_scraper.py
ahrie-ai/src/tools/: __init__.py  agent_tools.py
ahrie-ai/src/translations/: __init__.py  i18n.py
ahrie-ai/src/translations/locales/: ar.json  en.json  ko.json
ahrie-ai/src/utils/: __init__.py  config.py  logger.py
ahrie-ai/tests/: __init__.py
ahrie-frontend/: next.config.ts  package-lock.json  package.json
ahrie-frontend/src/app/: layout.tsx  page.tsx
ahrie-frontend/src/components/: LenisScroll.tsx
ahrie-frontend/src/components/Hero/: HeroSection.module.scss  HeroSection.tsx  KBeautySymbol.module.scss  KBeautySymbol.tsx  KBeautyVisual.module.scss  KBeautyVisual.tsx
ahrie-frontend/src/components/Journey/: JourneySection.module.scss  JourneySection.tsx
ahrie-frontend/src/components/Navigation/: LanguageToggle.module.scss  LanguageToggle.tsx  NavBar.module.scss  NavBar.tsx
ahrie-frontend/src/components/Services/: ServicesSection.module.scss  ServicesSection.tsx
ahrie-frontend/src/styles/: design-tokens.scss  globals.scss  loading.scss
